# local-win-xcript-deepgram

./: .env.example  .gitignore  pyproject.toml  requirements.txt
.claw/sessions/427d65f728980166/: session-1776083968932-0.jsonl
configs/: default.yaml
scripts/: create-desktop-shortcut.ps1  install-whispercpp.ps1  run.ps1  setup.ps1  test-backend.ps1
src/local_wispr_transcript/: app.py  cli.py  config.py  constants.py  logging_setup.py  overlay.py  types.py
src/local_wispr_transcript/audio/: __init__.py  recorder.py
src/local_wispr_transcript/backends/: __init__.py  base.py  deepgram_backend.py  gemini_backend.py  openai_backend.py  whisper_cpp.py
src/local_wispr_transcript/hotkeys/: __init__.py  service.py
src/local_wispr_transcript/output/: __init__.py  clipboard_paste.py
src/local_wispr_transcript/postprocess/: __init__.py  cleanup.py
tests/: test_cleanup.py  test_config.py
