[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-wispr-transcript"
version = "0.1.0"
description = "Windows-first push-to-transcribe dictation tool with Deepgram streaming and whisper.cpp fallback."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Keith" }
]
dependencies = [
  "PyYAML>=6.0.2",
  "python-dotenv>=1.0.1",
  "sounddevice>=0.5.1",
  "websocket-client>=1.8.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5",
]

[project.scripts]
local-wispr-transcript = "local_wispr_transcript.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

